--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
                             <div class="input-t position-relative">
                                 <label for="" class="phone_label label_text">手机号码</label>
                                 <input type="text" name="phone" class="phone_inp inp position-absolute">
-                                <span class="d-none warn_text">请输入正确的手机号</span>
+                                <span class=" warn_text">请输入正确的手机号</span>
                             </div>
                         </div>
                         <div class="vcode_block inp-text position-relative mt-5">
@@ -47,7 +47,7 @@
                         <a class="quick_login form_text login_pwd float-right" href="javascript:;">手机快捷登录</a> 
                         <a class="form_text login_pwd float-right" href="javascript:;">密码登录</a>
                     <div class="mt-4 warn_text w-100 text-center d-none">手机验证码错误</div>
-                    <div class="mt-4 warn_text w-100 text-center d-none">密码错误</div>
+                    <div class="mt-4 warn_text w-100 text-center">密码错误</div>
                     <div class="d-flex justify-content-center w-100">
                         <button class="button2" onclick="login()">登录</button>
                         <button class="button2 position-absolute">登录</button>
