--- a/public/menu-list.html
+++ b/public/menu-list.html
@@ -12,10 +12,10 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div class="big_block h-100">
+            <div class="big_block">
                 <div class="block1">
-                    <img class="menu-list-img" src="../picture/bgz1_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz1.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz1_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz1.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title">我是领克</p>
@@ -32,8 +32,8 @@
                     </div>
                 </div>
                 <div class="block2">
-                    <img class="menu-list-img" src="../picture/bgz2_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz2.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz2_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz2.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title">全系车型</p>
@@ -55,8 +55,8 @@
                     </div>
                 </div>
                 <div class="block3">
-                    <img class="menu-list-img" src="../picture/bgz3_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz3.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz3_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz3.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title">即刻购车</p>
@@ -70,8 +70,8 @@
                     </div>
                 </div>
                 <div class="block4">
-                    <img class="menu-list-img" src="../picture/bgz4_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz4.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz4_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz4.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center position-absolute menu-list-block">
                             <p class="menu-title">智享服务</p>
@@ -85,8 +85,8 @@
                     </div>
                 </div>
                 <div class="block5">
-                    <img class="menu-list-img" src="../picture/bgz5_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz5.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz5_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz5.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title">Co:Club</p>
@@ -99,8 +99,8 @@
                     </div>
                 </div>
                 <div class="block6">
-                    <img class="menu-list-img" src="../picture/bgz6_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz6.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz6_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz6.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title menu-list-block">Co:Lab</p>
