--- a/public/index.html
+++ b/public/index.html
@@ -194,8 +194,8 @@
             <!-- 隐藏的菜单页 -->
             <div class="big_block h-100">
                 <div class="block1">
-                    <img class="menu-list-img" src="../picture/bgz1_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz1.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz1_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz1.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title">我是领克</p>
@@ -212,8 +212,8 @@
                     </div>
                 </div>
                 <div class="block2">
-                    <img class="menu-list-img" src="../picture/bgz2_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz2.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz2_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz2.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title">全系车型</p>
@@ -235,8 +235,8 @@
                     </div>
                 </div>
                 <div class="block3">
-                    <img class="menu-list-img" src="../picture/bgz3_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz3.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz3_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz3.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title">即刻购车</p>
@@ -250,8 +250,8 @@
                     </div>
                 </div>
                 <div class="block4">
-                    <img class="menu-list-img" src="../picture/bgz4_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz4.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz4_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz4.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center position-absolute menu-list-block">
                             <p class="menu-title">智享服务</p>
@@ -265,8 +265,8 @@
                     </div>
                 </div>
                 <div class="block5">
-                    <img class="menu-list-img" src="../picture/bgz5_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz5.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz5_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz5.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title">Co:Club</p>
@@ -279,8 +279,8 @@
                     </div>
                 </div>
                 <div class="block6">
-                    <img class="menu-list-img" src="../picture/bgz6_gray.png" alt="">
-                    <img class="d-none menu-list-limg h-100" src="../picture/bgz6.png" alt="">
+                    <img class="menu-list-img" src="../picture/bgz6_gray.png">
+                    <img class="menu-list-limg h-100" src="../picture/bgz6.png">
                     <div class="w-100 h-100 pt-5 position-absolute menu_list_p">
                         <div class="text-center menu-list-block position-absolute">
                             <p class="menu-title menu-list-block">Co:Lab</p>
@@ -415,5 +415,6 @@
         <script src="js/jquery-1.11.3.js"></script>
         <script src="./js/index-header.js"></script>
         <script src="./js/index.js"></script>
+        <script src="./js/menu-list.js"></script>
     </body>
 </html>
