--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -3,15 +3,14 @@
         <meta charset="UTF-8">
         <title>Document</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="./css/bootstrap.css">
-        <script src="./js/jquery.min.js"></script>
-        <script src="./js/popper.min.js"></script>
-        <script src="./js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="./lk-css/common.css">
-        <link rel="stylesheet" href="./lk-css/register.css">
-        <link rel="stylesheet" href="./lk-css/login-footer.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <script src="js/jquery.min.js"></script>
+        <script src="js/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="./lk-css/login-header.css">
-        <script src="./js/reg.js"></script>
+        <link rel="stylesheet" href="./lk-css/login-footer.css">
+        <link rel="stylesheet" href="./lk-css/common.css">
+        <link rel="stylesheet" href="./lk-css/forgot-password.css">
     </head>
     <body>
         <div class="container-fluid">
@@ -31,32 +30,39 @@
                     </li>
                 </ul>
             </div>
-            <!-- 注册页面 -->
+            <!-- 忘记密码页面 -->
             <div class="reg_page d-flex flex-column align-items-center">
-                <h1 class="page_title p-5 text-center">注册</h1>
+                <h1 class="page_title p-5 text-center">忘记密码</h1>
                 <form method="POST" action="/customer/register" class="mb-0 mt-4">
                     <fieldset>
-                        <div class="inp_bor position-relative">
-                            <input type="text" class="inp uname-inp position-absolute" name="uname">
-                            <label for="" class="inp_text label-uname position-absolute">用户名</label>
-                        </div>
-                        <div class="inp_bor position-relative mt-5 d-none">
+                        <div class="inp_bor position-relative mt-2">
                             <input type="text" class="inp phone-inp position-absolute" name="phone">
                             <label for="" class="inp_text label-phone position-absolute">手机号码</label>
+                        </div>
+                        <div class="click_vis position-relative mt-4">
+                            <input type="text" class="inp vcode-inp position-absolute">
+                            <label for="" class="inp_text label-vcode position-absolute">验证码</label>
+                        </div>
+                        <div class="click_vis position-relative mt-4">
+                            <input type="text" class="inp pwd-inp position-absolute">
+                            <label for="" class="inp_text label-pwd position-absolute">长度6~16位，数字、字母、字符（~!@#$%&*()_-）至少两种</label>
+                        </div>
+                        <div class="click_vis position-relative mt-4">
+                            <input type="text" class="inp rpwd-inp position-absolute">
+                            <label for="" class="inp_text label-rpwd position-absolute">验证密码</label>
                         </div>
                         <div class="slide_block mt-3 position-relative">
                             <span>请按住滑块，拖动到最右边</span>
                             <div class="slide_btn position-absolute">>></div>
                         </div>
                     </fieldset>
-                    <div class="text-center mt-5 mb-4">
+                    <div class="text-center mt-4 mb-4">
                         <button class="btn_vcode">发送验证码</button>
                     </div>
+                    <div class="text-center mt-4 mb-4 d-none">
+                        <button class="btn_vcode">修改密码</button>
+                    </div>
                 </form>
-                <div>
-                    <span class="span_text">已经是注册用户?</span>
-                    <a href="./login.html" class="form_text ml-2">登录</a>
-                </div>
             </div>
             <!-- 页面底部 -->
             <ul class="list-unstyled d-flex justify-content-center">
@@ -86,7 +92,7 @@
                 </li>
             </ul>
         </div>
-        <script src="../public/js/jquery-1.11.3.js"></script>
-        <script src="../public/js/reg.js"></script>
+        <script src="./js/jquery-1.11.3.js"></script>
+        <script src="./js/forgot-password.js"></script>
     </body>
 </html>
