--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 <div class="col-12">
                     <div class="nav_block no-gutters row position-relative d-flex flex-nowrap align-items-center">
                         <div class="top_search">
-                            <span><img class="search_icon mb-1" src="../shop_picture/search.png" alt=""></span>
+                            <span><img class="search_icon mb-1" src="../shop_picture/search.png"></span>
                             <input type="text" class="top_input" placeholder="输入您想了解的">
                             <span class="top_close text-white">×</span>
                         </div>
@@ -38,10 +38,10 @@
                             </ul>
                         </div>
                         <ul class="e_icon col-3 list-unstyled d-flex justify-content-end mb-0">
-                            <li class="px-3"><img class="help" src="../picture/help.png" alt="call"></li>
-                            <li class="px-3"><a href="./login.html"><img src="../picture/den.png" alt=""></a></li>
+                            <li class="px-3"><img class="help" src="../picture/help.png"></li>
+                            <li class="px-3"><a href="./login.html"><img src="../picture/den.png"></a></li>
                             <li class="px-3"><img class="search_img" src="../picture/search.png"></li>
-                            <li class="px-3"><a href="./shop.html"><img src="../picture/shop.png" alt=""></a></li>
+                            <li class="px-3"><a href="./shop.html"><img src="../picture/shop.png"></a></li>
                         </ul>
                     </div>
                 </div>
