--- a/public/login-header.html
+++ b/public/login-header.html
@@ -15,15 +15,15 @@
             <div class="position-relative header-h">
                 <ul class="list-unstyled p-left py-3 position-absolute">
                     <li>
-                        <a href="./index.html"><img class="" src="../picture/logo.png" alt="logo"></a>
+                        <a href="./index.html"><img class="" src="../picture/logo.png"></a>
                     </li>
                 </ul>
                 <ul class="list-unstyled position-absolute p-right d-flex justify-content-end ">
                     <li class="ml-4">
-                        <a href="#"><img class="mt-4" src="../picture/shop.png" alt="shop"></a>
+                        <a href="./shop.html"><img class="mt-4" src="../picture/shop.png"></a>
                     </li>
                     <li class="ml-4">
-                        <a href="#"><img class="mt-4" src="../picture/toClub.png" alt="toClub"></a>
+                        <a href="#"><img class="mt-4" src="../picture/toClub.png"></a>
                     </li>
                 </ul>
             </div>
