--- a/public/login.html
+++ b/public/login.html
@@ -9,10 +9,29 @@
         <script src="./js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="./lk-css/common.css">
         <link rel="stylesheet" href="./lk-css/login.css">
+        <link rel="stylesheet" href="./lk-css/login-header.css">
+        <link rel="stylesheet" href="./lk-css/login-footer.css">
     </head>
     <body>
         <div class="container-fluid">
-            <div class="d-flex flex-column align-items-center">
+            <!-- 页面头部 -->
+            <div class="position-relative header-h">
+                <ul class="list-unstyled p-left py-3 position-absolute">
+                    <li>
+                        <a href="./index.html"><img class="" src="../picture/logo.png"></a>
+                    </li>
+                </ul>
+                <ul class="list-unstyled position-absolute p-right d-flex justify-content-end ">
+                    <li class="ml-4">
+                        <a href="./shop.html"><img class="mt-4" src="../picture/shop.png"></a>
+                    </li>
+                    <li class="ml-4">
+                        <a href="#"><img class="mt-4" src="../picture/toClub.png"></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 登录页面 -->
+            <div class="login_page d-flex flex-column align-items-center">
                 <h1 class="text-white login-m p-5 text-center">登录</h1>
                 <form method="GET" action="/customer/login" class="mb-0 position-relative form_info">
                     <fieldset>
@@ -20,25 +39,24 @@
                             <div class="input-t position-relative">
                                 <label for="" class="phone_label label_text">手机号码</label>
                                 <input type="text" name="phone" class="phone_inp inp position-absolute">
-                                <span class=" warn_text">请输入正确的手机号</span>
                             </div>
+                            <span class="err_phone mt-2">请输入正确的手机号</span>
                         </div>
                         <div class="vcode_block inp-text position-relative mt-5">
                             <div class="input-t position-relative">
                                 <label for="" class="vcode_label label_text">验证码</label>
                                 <input type="text" name="vcode" class="vcode_inp inp position-absolute">
-                                <button class="position-absolute button1">获取验证码</button>
-                                <span class="d-none warn_text">验证码错误</span>
+                                <button type="button" class="position-absolute button1">获取验证码</button>
                             </div>
                         </div>
                         <div class="pwd_block inp-text position-relative mt-5">
                             <div class="input-t position-relative">
                                 <label for="" class="pwd_label label_text">请输入密码</label>
-                                <input type="text" name="upwd" class="pwd_inp inp position-absolute">
-                                <span class="d-none warn_text">请输入您的密码</span>
+                                <input type="password" name="upwd" class="pwd_inp inp position-absolute">
                             </div>
+                            <span class="input_pwd mt-2">请输入您的密码</span>
                         </div>
-                        <div class="position-relative mt-4 text-center slide_block d-none">
+                        <div class="position-relative mt-4 text-center slide_block">
                             <div class="p-3">请按住滑块，拖动到最右边</div>
                             <span class="position-absolute slide_btn d-inline-block">>></span>
                         </div>
@@ -46,18 +64,45 @@
                         <a class="form_text forget d-inline-block" href="#">忘记密码?</a>
                         <a class="quick_login form_text login_pwd float-right" href="javascript:;">手机快捷登录</a> 
                         <a class="form_text login_pwd float-right" href="javascript:;">密码登录</a>
-                    <div class="mt-4 warn_text w-100 text-center d-none">手机验证码错误</div>
-                    <div class="mt-4 warn_text w-100 text-center">密码错误</div>
+                    <div class="mt-4 err_vcode w-100 text-center">手机验证码错误</div>
+                    <div class="mt-4 err_pwd w-100 text-center">用户密码错误</div>
                     <div class="d-flex justify-content-center w-100">
-                        <button class="button2" onclick="login()">登录</button>
-                        <button class="button2 position-absolute">登录</button>
+                        <button type="button" class="button2">登录</button>
+                        <!-- <button class="button2 position-absolute">登录</button> -->
                     </div>
                 </form>
                 <div class="d-flex justify-content-center">
                     <span class="span_text">还没注册?</span>
                     <a href="./reg.html" class="form_text ml-2">创建账户</a>
                 </div>
-            </div>           
+            </div>  
+            <!-- 页面底部 -->
+            <ul class="list-unstyled d-flex justify-content-center">
+                <li class="p-3">
+                    <a class="top_text" href="#">媒体库</a>
+                </li>
+                <li class="p-3">
+                    <a class="top_text" href="#">隐私政策</a>
+                </li>
+                <li class="p-3">
+                    <a class="top_text" href="#">公司</a>
+                </li>
+                <li class="p-3">
+                    <a class="top_text" href="#">退款说明</a>
+                </li>
+            </ul>
+            <ul class="row list-unstyled d-flex justify-content-center mb-0 bg-white">
+                <li><img class="w-100" src="../picture/weibo.png" alt=""></li>
+                <li><img class="w-100" src="../picture/wechat.png" alt=""></li>
+                <li class="p-3"><a class="bottom_text" href="#" target="_blank">客服热线：4006-010101 (24小时热线电话)</a></li>
+                <li class="p-3"><a class="bottom_text" href="#" target="_blank">浙ICP备11045738号-12</a></li>
+                <li class="p-3">
+                    <a href="#" target="_blank">
+                        <img class="" src="../picture/police.png" alt="">
+                        <span class="bottom_text">浙公网安备 33010802009900号</span>
+                    </a>
+                </li>
+            </ul>         
         </div>
         <script src="js/jquery-1.11.3.js"></script>
         <script src="js/login.js"></script>
